# RogueTop

./: .gitignore  README.md  bootstrap_pokerogue.cmd  bootstrap_pokerogue.sh  eslint.config.js  justfile  mise.toml  package.json  pnpm-lock.yaml  types.d.ts  vite.config.ts
.claude/: settings.local.json
.github/: dependabot.yml
.github/scripts/: release_notes.py
.github/workflows/: backend.yml  build.yml  frontend.yml
ext/: globals.d.ts  index.ts  keys.ts  rpc.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/src/: config.rs  game.rs  lib.rs
src-tauri/src/offline/: api.rs  mod.rs  server.rs
src-tauri/src/util/: discord_rpc.rs  paths.rs
src/chunks/: Main.css  Main.tsx  NameManager.css  NameManager.tsx
src/components/: Checkbox.tsx
