[package]
name = "roguetop"
version = "0.4.0"
description = "Online & Offline PokeRogue desktop client"
authors = ["SpikeHD"]
edition = "2021"

[features]
default = []
offline = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
lto = true
strip = "debuginfo"

[lib]
name = "roguetop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
tauri = { version = "2.10.3", features = [ "devtools" ] }
tauri-plugin-shell = "2.3.5"
tauri-plugin-gamepad = "0.0.5"
tauri-plugin-updater = "2.10.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.149"
dirs = "6.0.0"
chrono = "0.4.44"
colored = "3.1.1"
tiny_http = "0.12.0"
mime_guess = "2.0.5"
url-escape = "0.1.1"
once_cell = "1.21.4"
zip = "8.4.0"
reqwest = { version = "0.13.2", features = [ "blocking" ] }
base64 = "0.22"
open = "5.3.3"
discord-rich-presence = "1.1.0"

[dev-dependencies]
tempfile = "3"

